--- a/blockly/core/popup.css
+++ b/blockly/core/popup.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 .container{
@@ -16,8 +15,9 @@
 
 .popup{
     width: 400px;
+    font-family:'Helvetica';
     background-color: rgb(63, 159, 248);
-    background-image: linear-gradient(rgb(11, 109, 11), rgb(26, 179, 26) );
+    background-image: linear-gradient(rgba(8, 142, 8, 0.571), rgba(32, 223, 32, 0.703) );
     border-radius: 6px;
     position:absolute;
     top: 0;
@@ -25,7 +25,7 @@
     transform: translate(-50%,-50%) scale(0.1);
     text-align: center;
     padding: 0 30px 30px;
-    color: #1c1414;
+    color: #070505;
     visibility: hidden;
     transition: transform 0.4s, top 0.4s;
 }
