Trying to make sure the rest of the site also works

--- a/blockly/core/progress_bar.css
+++ b/blockly/core/progress_bar.css
@@ -7,7 +7,7 @@
   }
   
   .progress-bar {
-    width: 0%;
+    width: 0%; /* Initial width */
     height: 30px;
     background-color: #4caf50;
   }
