--- a/blockly/core/popup.css
+++ b/blockly/core/popup.css
@@ -17,7 +17,7 @@
     width: 400px;
     font-family:'Helvetica';
     background-color: rgb(63, 159, 248);
-    background-image: linear-gradient(rgba(8, 142, 8, 0.571), rgba(32, 223, 32, 0.703) );
+    background-image: linear-gradient(rgba(32, 223, 32, 0.703), rgba(8, 142, 8, 0.571) );
     border-radius: 6px;
     position:absolute;
     top: 0;
@@ -52,13 +52,19 @@
 .popup h3{
     font-size: 24px;
     font-weight: 500;
-    margin: 50px 0 10px; 
+    margin: 30px 0 10px; 
+}
+
+.popup h4{
+    font-size: 18px;
+    font-weight: 500;
+    margin: 30px 0 10px; 
 }
 
 
 .popup button{
     width: 100%;
-    margin-top: 50px;
+    margin-top: 20px;
     padding: 10px 0;
     color: #000000;
     border: 0;
