--- a/blockly/core/popup.css
+++ b/blockly/core/popup.css
@@ -82,3 +82,40 @@
     box-shadow: 0 2p 5px rgba(0, 0, 0, 0.2);
 }
 
+/* Fullscreen popup */
+.homescreen-popup {
+    /* width: 100%;
+    height: 100vh;
+    font-family: 'Helvetica';
+    background-color: rgba(67, 156, 62, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.4s;
+    color: #ffffff;
+    text-align: center;
+    padding: 20px; */
+    width: 100%;
+    height: 100%;
+    font-family:'Helvetica';
+    background-color: rgb(63, 159, 248);
+    background-image: linear-gradient(rgba(32, 223, 32, 0.703), rgba(8, 142, 8, 0.571) );
+    border-radius: 6px;
+    position:fixed;
+    top: 0;
+    left: 0;
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #070505;
+    visibility: hidden;
+}
+
+.open-homescreen-popup {
+    visibility: visible;
+    opacity: 1;
+}
