--- a/blockly/core/popup.css
+++ b/blockly/core/popup.css
@@ -50,6 +50,14 @@
     box-shadow: 0 2p 5px rgba(0, 0, 0, 0.234);
 }
 
+.popup .img3{
+    width: 10px;
+    margin-top: 20px;
+    border-radius: 50%;
+    box-shadow: 0 2p 5px rgba(0, 0, 0, 0.234);
+}
+
+
 .popup h2{
     font-size: 38px;
     font-weight: 500;
@@ -103,8 +111,7 @@
     width: 100%;
     height: 100%;
     font-family:'Helvetica';
-    background-color: rgb(63, 159, 248);
-    background-image: linear-gradient(rgba(32, 223, 32, 0.703), rgba(8, 142, 8, 0.571) );
+    background-color:#D9D9D9;
     border-radius: 6px;
     position:fixed;
     top: 0;
@@ -114,6 +121,8 @@
     color: #070505;
     visibility: hidden;
     z-index: 2;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
 }
 
 .open-homescreen-popup {
