--- a/blockly/core/popup.css
+++ b/blockly/core/popup.css
@@ -118,13 +118,31 @@
     left: 0;
     text-align: center;
     padding: 0 30px 30px;
-    color: #070505;
     visibility: hidden;
     z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    border: 40px solid;
+    border-image: linear-gradient(#5B80A5, #A55B80);
+    border-image-slice: 1;
+}
+
+.popup-content {
+    width: 100%;
+    max-width: 700px; /* Smaller width for text content */
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    text-align: center;
+  }
+
+.use-case-background {
+    background-color: rgba(91, 128, 165, 0.6); /* Example background color for steps */
+    padding: 0px;
+    border-radius: 6px;
+    margin-bottom: 0px; 
 }
 
 .button-container{
