--- a/blockly/core/popup.css
+++ b/blockly/core/popup.css
@@ -16,8 +16,8 @@
 .popup{
     width: 400px;
     font-family:'Helvetica';
-    background-color: rgb(63, 159, 248);
-    background-image: linear-gradient(rgba(32, 223, 32, 0.703), rgba(8, 142, 8, 0.571) );
+    background-color: white;
+    background-image: linear-gradient(rgba(91, 128, 165, 0.8), rgba(165, 91, 128, 1));
     border-radius: 6px;
     position:absolute;
     top: 0;
