--- a/blockly/core/progress_bar.css
+++ b/blockly/core/progress_bar.css
@@ -9,5 +9,5 @@
   .progress-bar {
     width: 0%; /* Initial width */
     height: 60px;
-    background-color: #4caf50;
+    background-color: #609560;
   }
